@@ -1,0 +1,9 @@
+#!/bin/bash
+#
+# Just a "Hello World" program.
+#
+# Author: Max Kellermann <mk@cm4all.com>
+
+echo "Status: 204 No Content"
+echo "Content-Type: text/plain; charset=UTF-8"
+echo
