@@ -1,0 +1,10 @@
+#!/bin/bash
+#
+# Just a "Hello World" program.
+#
+# Author: Max Kellermann <mk@cm4all.com>
+
+echo "Status: 201 Created"
+echo "Content-Type: text/plain; charset=UTF-8"
+echo
+echo "error"
